--- a/themes/hugo-theme-bootstrap4-blog/source/scss/main.scss
+++ b/themes/hugo-theme-bootstrap4-blog/source/scss/main.scss
@@ -103,11 +103,11 @@ h6, .h6 {
   color: #999;
 }
 
-@media (min-width: 40em) {
-  .blog-title {
-    font-size: 3.5rem;
-  }
-}
+// @media (min-width: 40em) {
+//   .blog-title {
+//     font-size: 2.5rem;
+//   }
+// }
 
 
 /*
@@ -149,7 +149,7 @@ h6, .h6 {
 }
 .blog-post-title {
   margin-bottom: .25rem;
-  font-size: 2.5rem;
+  font-size: 2rem;
 }
 .blog-post-meta {
   margin-bottom: 1.25rem;
