reset date_format

--- a/themes/hugo-theme-bootstrap4-blog/layouts/_default/baseof.html
+++ b/themes/hugo-theme-bootstrap4-blog/layouts/_default/baseof.html
@@ -85,7 +85,7 @@
       {{ if .Site.Copyright }}
       {{ .Site.Copyright | markdownify }}
       {{ else }}
-      版权所有：@北京大学软件工程研究所《人机物融合的云计算架构与平台》项目组
+      版权所有 ©人机物融合的云计算架构与平台项目组
       <!-- Blog template created by <a href="https://twitter.com/mdo">@mdo</a>, ported to Hugo by <a href='https://twitter.com/mralanorth'>@mralanorth</a>. -->
       {{ end }}
       </p>
